@startuml

skinparam monochrome true
skinparam classAttributeIconSize 0

together mainAppGroup{
    
    class javafx.application.Application{
        +start()
        +launch()
    }
    class App{
        +main()
        +start()
        -initializeRootPane()
        -initializeChildrenPanes()
        -initializeParametersHolder()
        -addXminToParametersHolder()
        -addXmaxToParametersHolder()
        -addYminToParametersHolder()
        -addYmaxToParametersHolder()
        -addDeltaXminToParametersHolder()
        -addDeltaXmaxToParametersHolder()
        -addDeltaYminToParametersHolder()
        -addDeltaYmaxToParametersHolder()
        -addNumOfPointsToParametersHolder()
        -addAppModeComboBoxToParametersHolder()
        -addParametersHolderToParametersPane()
        -addRefreshingRateToParametersHolder()
        -addScalingFactorToParametersHolder()
        -parseParametersFromGuiControls()
        -initializeVectorField()
        -setModesComboBoxOnAction()
        -setXminCtrlOnAction()
        -setXmaxCtrlOnAction()
        -setYminCtrlOnAction()
        -setYmaxCtrlOnAction()
        -setDeltaXminCtrlOnAction()
        -setDeltaXmaxCtrlOnAction()
        -setDeltaYminCtrlOnAction()
        -setDeltaYmaxCtrlOnAction()
        -setNumberOfPointsOnAction()
        -setScalingFactorOnAction()
        -setRefreshinRateOnAction()
        -initializeStage()
        -GenerateVectorFieldData()
    }
    class PeriodicDataGenerator{
        +PeriodicDataGenerator()
        +run()
    }
    class java.util.TimerTask{

    }
}


javafx.application.Application <|-- App
PeriodicDataGenerator --+ App
PeriodicDataGenerator --|> java.util.TimerTask


App -[hidden]right-- javafx.application.Application
PeriodicDataGenerator -[hidden]up-- java.util.TimerTask

@enduml
